[tool.poetry]
name = "python-container"
version = "0.1.0"
description = ""
authors = ["Fabio Kleis <fabiohkrc@gmail.com>"]
readme = "README.md"
packages = [{include = "python_container"}]

[tool.poetry.scripts]
pc = "python_container.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


